
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int AF_PACKET ;
 int ETH_P_ARP ;
 int EXIT_FAILURE ;
 int SOCK_DGRAM ;
 int exit (int ) ;
 int htons (int ) ;
 int perror (char*) ;
 int socket (int ,int ,int ) ;

int timer_kmalloc() {
 int s = socket(AF_PACKET, SOCK_DGRAM, htons(ETH_P_ARP));
 if (s == -1) {
  perror("socket(SOCK_DGRAM)");
  exit(EXIT_FAILURE);
 }
 return s;
}
